# samfit

./: .dir-locals.el  .gitignore  calc.py  category.py  config.py  exceptions.py  garmin.py  garmin_connect.py  garmin_workout.py  ical.py  main.py  plans.py  requirements.txt  setup.cfg  showplan.py  tp.py  tp_workoutid.py  tr.py  tr_schedule.py  traineroad.py  traineroad_plan_md.py  trainingpeaks.py  utils.py  zwift.py
cache/: program_workouts_738225_2019-10-14_2019-11-23.json  program_workouts_738225_2019-12-02_2020-01-25.json  program_workouts_738225_2020-06-01_2020-06-28.json  program_workouts_738225_2021-01-04_2021-06-20.json  tp_libraries_chmouel.json  tp_libraries_elmachonolo.json  tp_libraries_soultatane.json  user_elmachonolo.json  user_soultatane.json
newg/: main.py  pyproject.toml
newg/samfit/: args.py  config.py  tp_plans_to_plans.py  tpapi.py  tpsession.py  tr_plans_to_tp_calendar.py  tr_workouts_to_tp_library.py
old/: garmin_connect.py  genindex.py  main.py  tp.py  tr.py  tr_upload.py  zwift.py
plans/: redo-link.sh
plans/TP-8020-Marathon-3.json/: TP-8020-Marathon-3.json
soft/: .dir-locals.el  config.py  exceptions.py  main.py  plans.py  requirements.txt  traineroad.py  traineroad_plan_md.py  utils.py
soft/trainingpeaks/: calendar.py  library.py  session.py  user.py
trainingpeaks/: calendar.py  library.py  session.py
